updated files for the addition of extract feature

--- a/GUI files/layout.html
+++ b/GUI files/layout.html
@@ -45,6 +45,10 @@
                 <button id="addTime" type="button" style="margin-top: 10px; border-radius: 10px; height: 30px; background-color: #AF1BAA; color: white;">Add Conditions</button>
             </div>
 
+            <div class="ExtractResults" style="margin-top:20px;">
+                <button onclick="extractResults()" style="border-radius: 10px; height: 30px; background-color: #12F7FF; color: black; border: none; margin-left: 25px; font-weight: bold; ">Extract Results</button>
+            </div>
+
         </form>
     </div>
 
